--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -6,8 +6,11 @@
     <title>Title</title>
 </head>
 <body>
-    <img src="./img/01.jpg"/>
 <h1>静夜思</h1>
 <p>床前明月光</p>
+    <p>床前明月光</p>
+    <p>床前明月光</p>
+    <p>床前明月光</p>
+    <p>床前明月光</p>
 </body>
 </html>
