--- a/001Basics/index.html
+++ b/001Basics/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+    body{
+        background-image:url(./img/01.jpg);
+    }
 </head>
 <body>
-    <img src="./img/01.jpg"/>
+   
 <h1>静夜思</h1>
 <p>床前明月光</p>
 </body>
