--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -1,16 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>静夜思</h1>
-<p>床前明月光</p>
-    <p>床前明月光</p>
-    <p>床前明月光</p>
-    <p>床前明月光</p>
-    <p>床前明月光</p>
-</body>
-</html>
+    <title>唐诗</title>
+    <style type="text/css">
+        body{
+            background-image:url(./img/01.jpg);
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        html{
+            height: 100%;
+        }
+        </head>
+          <body>
+          <h1>静夜思</h1>
+                   <p>床前明月光</p>
+                   <p>床前明月光</p>
+             </body>
+                </html>
