--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>唐诗</title>
+    <style>
+        body{
+            background-image: url("img/01.jpg");
+        }
+    </style>
         </head>
           <body>
           <h1>静夜思</h1>
