--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>唐诗</title>
-    <style>
+    <style type="text/css">
         body{
             background-image: url("img/01.jpg");
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        html{
+            height: 100%;
+        }
+        @keyframes myfirst{
+            from{opacity: 0;}
+            to{opacity: 100;}
+        }
+        h1,p{
+            animation: myfirst 3s infinite;
         }
     </style>
-        </head>
-          <body>
-          <h1>静夜思</h1>
-                   <p>床前明月光</p>
-                   <p>床前明月光</p>
-             </body>
-                </html>
+</head>
+<body>
+<h1>静夜思</h1>
+<p>床前明月光</p>
+<p>床前明月光</p>
+<p>床前明月光</p>
+<p>床前明月光</p>
+</body>
+</html>
