--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -13,12 +13,15 @@
             height: 100%;
         }
         @keyframes myfirst{
+            /*动画关键字  名字*/
             from{opacity: 0;}
             to{opacity: 100;}
         }
-        h1,p{
+        h1,p {
             animation: myfirst 3s infinite;
         }
+            /*属性    关键帧  变换时间  永远* /
+
     </style>
 </head>
 <body>
