--- a/001Basics/test.html
+++ b/001Basics/test.html
@@ -25,6 +25,7 @@
     </style>
 </head>
 <body>
+<audio src="music/Sleep Alone.mp3" controls="controls" autoplay="autoplay"></audio>
 <h1>静夜思</h1>
 <p>床前明月光</p>
 <p>床前明月光</p>
